[package]
name = "rlearn_rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rlearn_rust_test"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.19.0"
pyo3 = "0.19.0"
rlgym_sim_rs = { version = "0.1.0", path = "../rlgym-sim-rs" }
rocketsim_rs = "0.17.1"
