[package]
name = "rlearn_rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rlearn_rust_test"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.75"
numpy = "0.19.0"
optick = "1.3.4"
pyo3 = "0.19.0"
rlgym_sim_rs = { version = "0.1.0", path = "../rlgym-sim-rs" }
rocketsim_rs = "0.17.1"
tch = "0.13.0"

[profile.release-with-debug]
inherits = "release"
debug = true